Refactor talks page, data structure, and styling; add "Conferences" section and backend model.

--- a/data/menu.yml
+++ b/data/menu.yml
@@ -5,6 +5,9 @@ items:
   - title: "Talks"
     path: "/talks"
     icon: "fa-solid fa-microphone-lines"
+  - title: "Conferences"
+    path: "/conferences"
+    icon: "fa-solid fa-calendar-days"
   - title: "About"
     path: "/about"
     icon: "fa fa-thumbs-up"
