--- a/data/talks.yml
+++ b/data/talks.yml
@@ -1,431 +1,35 @@
-- year: "2026"
-  events:
-    - name: "MakeIT / JCON OpenBlend Slovenia"
-      url: "https://slovenia.jcon.one/en/"
-      date: "May 2026"
-      location: "Portorož, Slovenia"
-      flag: "🇸🇮"
-      talks:
-        - title: "A2A in 45 Minutes: Building Interoperable AI Agents"
-        - title: "From AI to Agent with Langchain4J"
-
-    - name: "JNation"
-      url: "https://www.jnation.pt/"
-      date: "May 2026"
-      location: "Coimbra, PT"
-      flag: "🇵🇹"
-      talks:
-        - title: "'A2A in 50 Minutes: Building Interoperable AI Agents"
-
-    - name: "Devoxx UK"
-      url: "https://www.devoxx.co.uk/"
-      date: "May 2026"
-      location: "London, UK"
-      flag: "🇬🇧"
-      talks:
-        - title: "Building Interoperable AI Agents in 30 Minutes"
-        - title: "Java Script (No, Not That One): Modern Automation with Java"
-
-    - name: "Devoxx France"
-      url: "https://www.devoxx.fr/"
-      date: "April 2026"
-      location: "Paris, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "A2A en 30 Minutes: Construire des agent IA qui communiquent"
-
-    - name: "JCON EUROPE"
-      url: "https://jcon.one/"
-      date: "April 2026"
-      location: "Köln, Germany"
-      flag: "🇩🇪"
-      talks:
-        - title: "A2A in 45 Minutes: Building Interoperable AI Agents"
-        
-    - name: "Voxxed Days Zurich"
-      url: "https://zurich.voxxeddays.com/"
-      date: "Mar 2026"
-      location: "Zürich, Switzerland"
-      flag: "🇨🇭"
-      talks:
-        - title: "Finding the Spark: A Career Reset Button."
-
-    - name: "Javaland"
-      url: "https://www.javaland.eu/en/home/"
-      date: "Mar 2026"
-      location: "Rust, Germany"
-      flag: "🇩🇪"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-
-    - name: "DubJUG"
-      url: "https://www.dubjug.org/"
-      date: "Feb 2026"
-      location: "Dublin, Ireland"
-      flag: "🇮🇪"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-        - title: "JavaScript (No, Not That One): Modern Automation with Java"
-
-    - name: "BeJUG"
-      url: "https://bejug.github.io"
-      date: "Feb 2026"
-      location: "Leuven, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Finding the Spark: A Career Reset Button."
-
-    - name: "Voxxed Days Ticino"
-      url: "https://ticino.voxxeddays.com/"
-      date: "Feb 2026"
-      location: "Lugano, Switzerland"
-      flag: "🇨🇭"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-
-    - name: "Quarkus Insight"
-      url: "https://quarkus.io/insights/"
-      date: "Jan 2026"
-      location: "Online"
-      flag: "🌐"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-          recording: https://www.youtube.com/watch?v=icLTCRGqC7s&pp=ygUOTG_Dr2MgTWFnbmV0dGU%3D
-
-- year: "2025"
-  events:
-    - name: "DevDay"
-      url: "https://devday.be/"
-      date: "Nov 2025"
-      location: "Mons, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/le-futur-dangular-au-dela-de-ngzone
-
-    - name: "Voxxed Days Thessaloniki"
-      url: "https://voxxeddays.com/thessaloniki/"
-      date: "Nov 2025"
-      location: "Thessaloniki, Greece"
-      flag: "🇬🇷"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/vdthess-the-future-of-angular-faster-lighter-stronger
-          recording: https://www.youtube.com/watch?v=n9IcRKkCltc
-        - title: "Mentorship / Discussion about personal branding and Public Speaking"
-
-    - name: "JavaCro 25"
-      url: "https://2025.javacro.hr/eng/"
-      date: "Oct 2025"
-      location: "Croatia"
-      flag: "🇭🇷"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-          slides: https://speakerdeck.com/magnette/ai-powered-form-wizards-chat-click-done-bd92e7ee-8557-4081-b6a2-4f6a1096bbcc
-        - title: "Opening Roundtable: Software Development in the Age of AI"
-
-    - name: "Devoxx Belgium"
-      url: "https://devoxx.be/"
-      date: "Oct 2025"
-      location: "Antwerpen, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "A2A in 30 Minutes: Building Interoperable AI Agents"
-          slides: https://speakerdeck.com/magnette/a2a-in-30-minutes-building-interoperable-ai-agents
-          recording: https://www.youtube.com/watch?v=BOpzs5AGU50
-        - title: "BOF: Java and JVM lovers in Belgium, let's unite!"
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-          slides: https://speakerdeck.com/magnette/ai-powered-form-wizards-chat-click-done-bd92e7ee-8557-4081-b6a2-4f6a1096bbcc
-          recording: https://www.youtube.com/watch?v=f_5b_qanhzg
-
-    - name: "Dev2Next"
-      url: "https://www.dev2next.com"
-      date: "Sep 2025"
-      location: "USA, Colorado Springs"
-      flag: "🇺🇸"
-      talks:
-        - title: "Bridging the Gap: Full-Stack Development Without the Headache"
-          slides: https://speakerdeck.com/magnette/dev2next-bridging-the-gap-full-stack-development-without-the-headaches
-
-    - name: "Voxxed Days Luxembourg"
-      url: "https://luxembourg.voxxeddays.com/en/"
-      date: "Jun 2025"
-      location: "Mondorf-les-Bains, Grand-Duchy of Luxembourg"
-      flag: "🇱🇺"
-      talks:
-        - title: "Au Cœur de l'Odyssée: Migrer une application d'Angular 10 à 19"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-19
-          recording: https://www.youtube.com/watch?v=8nIAR2aABlk&t=2s
-
-    - name: "Devoxx Poland"
-      url: "https://devoxx.pl/"
-      date: "Jun 2025"
-      location: "Kraków, Poland"
-      flag: "🇵🇱"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger-78e8b7b7-101e-434b-86ac-86c22dc992f6
-
-    - name: "MakeIT / JCON OpenBlend Slovenia"
-      url: "https://slovenia.jcon.one/en/"
-      date: "May 2025"
-      location: "Portorož, Slovenia"
-      flag: "🇸🇮"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-          slides: https://speakerdeck.com/magnette/ai-powered-form-wizards-chat-click-done
-        - title: "Bridging the Gap: Full-Stack Development Without the Headaches"
-          slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
-
-    - name: "GeeCON"
-      url: "https://www.geecon.org/"
-      date: "May 2025"
-      location: "Kraków, Poland"
-      flag: "🇵🇱"
-      talks:
-        - title: "Bridging the Gap: Full-Stack Development Without the Headaches"
-          slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
-          recording: https://www.youtube.com/watch?v=e_S_QAhyMks&pp=ygUOTG_Dr2MgTWFnbmV0dGU%3D
-
-    - name: "JCON EUROPE"
-      url: "https://jcon.one/"
-      date: "May 2025"
-      location: "Köln, Germany"
-      flag: "🇩🇪"
-      talks:
-        - title: "AI-Powered Form Wizards: Chat, Click, Done"
-          slides: https://speakerdeck.com/magnette/ai-powered-form-wizards-chat-click-done
-          recording: https://www.youtube.com/watch?v=z5m4ef_LtdQ
-
-    - name: "Angular Dev France"
-      url: "https://angulardevs.fr/"
-      date: "May 2025"
-      location: "Online"
-      flag: "🌐"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
-          recording: https://www.youtube.com/watch?v=HKMPqYmugtg
-
-    - name: "IA Data Day - Strasbourg"
-      url: "https://iadataday.capitale.dev/"
-      date: "Apr 2025"
-      location: "Strasbourg, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "RAG to the future : comment garder son IA à jour"
-          slides: https://speakerdeck.com/magnette/rag-to-the-future-comment-garder-son-ia-a-jour
-
-    - name: "Devoxx Greece"
-      url: "https://devoxx.gr/"
-      date: "Apr 2025"
-      location: "Athens, Greece"
-      flag: "🇬🇷"
-      talks:
-        - title: "A Developer's Tale: Migrating an Angular app from version 10 to 19"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-19
-          recording: https://www.youtube.com/watch?v=dwERF-hvPpk
-
-    - name: "Warsaw IT Days"
-      url: "https://warszawskiedniinformatyki.pl/en/"
-      date: "Apr 2025"
-      location: "Warsaw, Poland"
-      flag: "🇵🇱"
-      talks:
-        - title: "Bridging the Gap: Full-Stack Development Without the Headaches"
-          slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
-
-    - name: "Web Day"
-      url: "https://www.webdayconf.it/"
-      date: "Mar 2025"
-      location: "Milan, Italy"
-      flag: "🇮🇹"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
-
-    - name: "Voxxed Days Zurich"
-      url: "https://zurich.voxxeddays.com/"
-      date: "Mar 2025"
-      location: "Zürich, Switzerland"
-      flag: "🇨🇭"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
-          recording: https://www.youtube.com/watch?v=oMs4qcmbgRs&t=5s
-
-    - name: "DevApp Podcast"
-      url: "https://devapps.ms/"
-      date: "Jan 2025"
-      location: "Online"
-      flag: "🌐"
-      talks:
-        - title: "The Future of Angular: Faster, Lighter, Stronger"
-          slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
-
-    - name: "Angular Dev France"
-      url: "https://angulardevs.fr/"
-      date: "Jan 2025"
-      location: "Online"
-      flag: "🌐"
-      talks:
-        - title: "Au Cœur de l'Odyssée: Migrer une application d'Angular 10 à 18"
-          slides: https://speakerdeck.com/magnette/au-coeur-de-lodyssee-migrer-une-application-dangular-10-a-18
-          recording: https://www.youtube.com/watch?v=HqopjZLfZ-A
-
-- year: "2024"
-  events:
-    - name: "DevFest Venezia"
-      url: "https://gdg.community.dev/gdg-venezia/"
-      date: "Nov 2024"
-      location: "Mestre, Italy"
-      flag: "🇮🇹"
-      talks:
-        - title: "A Developer's Tale: Migrating an Angular app from version 10 to 18"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-18-e301429f-e64e-4095-b473-5e064c589394
-
-    - name: "DEVFEST Mons"
-      url: "https://gdg-mons.com/"
-      date: "Nov 2024"
-      location: "Mons, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Quarkus: Supersonic, Subatomic Full-Stack Development"
-          slides: https://speakerdeck.com/magnette/quarkus-supersonic-and-subatomic-fullstack-development
-          recording: https://www.youtube.com/watch?v=qtF_u2oZop0&t=2s
-
-    - name: "DevDay"
-      url: "https://devday.be/"
-      date: "Nov 2024"
-      location: "Mons, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Angular, l'épopée moderne : Décryptage des dernières avancées"
-          slides: https://speakerdeck.com/magnette/angular-lepopee-moderne-decryptage-des-dernieres-avancees
-
-    - name: "Devoxx Belgium"
-      url: "https://devoxx.be/"
-      date: "Oct 2024"
-      location: "Antwerpen, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Unleashing the power of Angular: Navigating the latest releases and transformations"
-          slides: https://speakerdeck.com/magnette/unleashing-the-power-of-angular-navigating-the-latest-releases-and-transformations-48728ce0-372e-46af-9518-6c8fce12cdf3
-          recording: https://www.youtube.com/watch?v=LEHmmxZfaUs
-        - title: "A Developer's Tale: Migrating an Angular app from version 10 to 18"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-18
-          recording: https://www.youtube.com/watch?v=pT2dWsodUpQ
-
-    - name: "RivieraDev"
-      url: "https://rivieradev.fr/"
-      date: "July 2024"
-      location: "Valbonne, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "Au Cœur de l'Odyssée: Migrer une application d'Angular 10 à 17"
-          slides: https://speakerdeck.com/magnette/au-coeur-de-lodyssee-migrer-une-application-dangular-10-a-17-2c5070e6-a004-42d0-9342-58c9c9482e1b
-        - title: "Quarkus: Supersonic, Subatomic Full-Stack Development"
-          slides: https://speakerdeck.com/magnette/quarkus-supersonic-subatomic-full-stack-development-d225d160-4141-4047-998d-08ea29b7b64d
-
-    - name: "Voxxed Days Luxembourg"
-      url: "https://luxembourg.voxxeddays.com/en/"
-      date: "June 2024"
-      location: "Mondorf-les-Bains, LU"
-      flag: "🇱🇺"
-      talks:
-        - title: "Quarkus: Supersonic, Subatomic Full-Stack Development"
-          slides: https://speakerdeck.com/magnette/quarkus-supersonic-subatomic-full-stack-development
-          recording: https://www.youtube.com/watch?v=Asg0xHTiJzo
-
-    - name: "Devoxx Poland"
-      url: "https://devoxx.pl/"
-      date: "June 2024"
-      location: "Kraków, Poland"
-      flag: "🇵🇱"
-      talks:
-        - title: "Unleashing the power of Angular: Navigating the latest releases and transformations"
-          slides: https://speakerdeck.com/magnette/unleashing-the-power-of-angular-navigating-the-latest-releases-and-transformations
-
-    - name: "DevFest Lille"
-      url: "https://devfest.gdglille.org/"
-      date: "June 2024"
-      location: "Lille, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "Dompter le chaos de l'information avec Langchain4J"
-          slides: https://speakerdeck.com/magnette/dompter-le-chaos-de-linformation-construire-un-allie-ia-avec-langchain4j
-          recording: https://www.youtube.com/watch?v=jlnhGSUiBV4
-
-    - name: "Voxxed Day Brussels"
-      url: "https://brussels24.voxxeddays.com/"
-      date: "May 2024"
-      location: "Brussels, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "A Developer's Tale: Migrating an Angular app from version 10 to 17"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-17-addd944f-97fb-4149-b070-e40854ee1e53
-          recording: https://www.youtube.com/watch?v=Asg0xHTiJzo
-
-    - name: "Devoxx UK"
-      url: "https://www.devoxx.co.uk/"
-      date: "May 2024"
-      location: "London, UK"
-      flag: "🇬🇧"
-      talks:
-        - title: "A Developer's Tale: Migrating an Angular app from version 10 to 17"
-          slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-17
-          recording: https://www.youtube.com/watch?v=v2qZPQDR1qk
-
-    - name: "Devoxx France"
-      url: "https://www.devoxx.fr/"
-      date: "April 2024"
-      location: "Paris, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "Au Cœur de l'Odyssée: Migrer une application d'Angular 10 à 17"
-          slides: https://speakerdeck.com/magnette/au-coeur-de-lodyssee-migrer-une-application-dangular-10-a-17
-          recording: https://www.youtube.com/watch?v=xhPYkBD6tng
-
-    - name: "JFokus"
-      url: "https://www.jfokus.se/"
-      date: "Feb 2024"
-      location: "Stockholm, Sweden"
-      flag: "🇸🇪"
-      talks:
-        - title: "Unleashing the power of Angular: Navigating the latest releases and transformations"
-          slides: https://speakerdeck.com/magnette/jfokus-2024-unleashing-the-power-of-angular-navigating-the-latest-releases-and-transformations
-          recording: https://www.youtube.com/watch?v=icf6YN3VN3g
-
-- year: "2023"
-  events:
-    - name: "Codeur en Seine"
-      url: "https://www.codeursenseine.com/"
-      date: "Oct 2023"
-      location: "Rouen, France"
-      flag: "🇫🇷"
-      talks:
-        - title: "Quarkus vs Spring Boot : Quel est le framework qui régnera en maître en 2023 ?"
-
-    - name: "Devoxx Belgium"
-      url: "https://devoxx.be/"
-      date: "Oct 2023"
-      location: "Antwerpen, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Unleashing the power of Angular: Navigating the latest releases and transformations"
-          recording: https://www.youtube.com/watch?v=O6f2Tp8MkdY
-    - name: "Voxxed Day Brussels"
-      url: "https://brussels24.voxxeddays.com/"
-      date: "May 2023"
-      location: "Brussels, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Quarkus vs Spring Boot: Which framework reigns supreme in 2023 ?"
-
-    - name: "DevDay"
-      url: "https://devday.be/"
-      date: "Mar 2023"
-      location: "Mons, Belgium"
-      flag: "🇧🇪"
-      talks:
-        - title: "Angular 13 to 15: A corner stone for Angular developers ?"
+- id: a2a
+  title: "A2A: Building Interoperable AI Agents"
+- id: ai-form-wizards
+  title: "AI-Powered Form Wizards: Chat, Click, Done"
+- id: langchain4j
+  title: "From AI to Agent with Langchain4J"
+- id: java-script
+  title: "Java Script (No, Not That One): Modern Automation with Java"
+- id: spark
+  title: "Finding the Spark: A Career Reset Button."
+- id: angular-future
+  title: "The Future of Angular: Faster, Lighter, Stronger"
+- id: fullstack
+  title: "Bridging the Gap: Full-Stack Development Without the Headaches"
+- id: rag
+  title: "RAG to the Future: Keeping Your AI Up to Date"
+  retired: true
+- id: angular-migration
+  title: "A Developer's Tale: Migrating an Angular App"
+  retired: true
+- id: quarkus-fullstack
+  title: "Quarkus: Supersonic, Subatomic Full-Stack Development"
+  retired: true
+- id: quarkus-vs-spring
+  title: "Quarkus vs Spring Boot"
+  retired: true
+- id: langchain4j-rag
+  title: "Dompter le chaos de l'information avec Langchain4J"
+  retired: true
+- id: mentorship
+  title: "Mentorship / Discussion about personal branding and Public Speaking"
+- id: roundtable-ai
+  title: "Opening Roundtable: Software Development in the Age of AI"
+- id: bof-java-belgium
+  title: "BOF: Java and JVM lovers in Belgium, let's unite!"
